--- a/themes/custom_theme/assets/css/theme.css
+++ b/themes/custom_theme/assets/css/theme.css
@@ -85,6 +85,8 @@ pre, pre code {
     white-space: pre;
     word-wrap: normal;
     overflow: auto;
+    margin-left: 0em !important;
+    margin-right: 0em !important;
 }
 
 article.post-micro {
